--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
   <body>
     <h1>Welcome to my Weather App</h1>
-    <footer>Built by Keesha Daniels</footer>
+    <footer>
+      Coded by <a href="https://github.com/keedan204"> Keesha Daniels</a> hosted
+      on
+      <a href="https://github.com/keedan204/Weather-Forecast-Project">Github</a>
+      and website hosted on
+      <a href="https://shecode-weather-forecast-project.netlify.app/"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
