Change to footer language

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Welcome to my Weather App</h1>
     <footer>
-      Coded by <a href="https://github.com/keedan204"> Keesha Daniels</a> hosted
-      on
+      Coded by <a href="https://github.com/keedan204"> Keesha Daniels</a> with
+      code hosted on
       <a href="https://github.com/keedan204/Weather-Forecast-Project">Github</a>
       and website hosted on
       <a href="https://shecode-weather-forecast-project.netlify.app/"
