Added targets to links

--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
   <body>
     <h1>Welcome to my Weather App</h1>
     <footer>
-      Coded by <a href="https://github.com/keedan204"> Keesha Daniels</a> with
-      code hosted on
-      <a href="https://github.com/keedan204/Weather-Forecast-Project">Github</a>
+      Coded by
+      <a href="https://github.com/keedan204" target="_blank"> Keesha Daniels</a>
+      with code hosted on
+      <a
+        href="https://github.com/keedan204/Weather-Forecast-Project"
+        target="_blank"
+        >Github</a
+      >
       and website hosted on
-      <a href="https://shecode-weather-forecast-project.netlify.app/"
+      <a
+        href="https://shecode-weather-forecast-project.netlify.app/"
+        target="_blank"
         >Netlify</a
       >
     </footer>
