--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Welcome to my Weather App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city.." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <h1>Winnipeg</h1>
+      <p>
+        Tuesday, 14:49, scattered clouds
+        <br />
+        Humidity: 66%, Wind: 3.13km/h
+      </p>
+    </main>
     <footer>
-      Coded by
+      This project was coded by
       <a href="https://github.com/keedan204" target="_blank"> Keesha Daniels</a>
       with code hosted on
       <a
