Added divs to main

--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
       </form>
     </header>
     <main>
-      <h1>Winnipeg</h1>
-      <p>
-        Tuesday, 14:49, scattered clouds
-        <br />
-        Humidity: 66%, Wind: 3.13km/h
-      </p>
+      <div>
+        <h1>Winnipeg</h1>
+        <p>
+          Tuesday, 14:49, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 3.13km/h
+        </p>
+      </div>
+      <div>🌤️ 12°C</div>
     </main>
+
     <footer>
       This project was coded by
       <a href="https://github.com/keedan204" target="_blank"> Keesha Daniels</a>
