--- a/index.html
+++ b/index.html
@@ -7,39 +7,43 @@
     <title>Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city.." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Winnipeg</h1>
-        <p>
-          Tuesday, 14:49, scattered clouds
-          <br />
-          Humidity: 66%, Wind: 3.13km/h
-        </p>
-      </div>
-      <div>🌤️ 12°C</div>
-    </main>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city.." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Winnipeg</h1>
+          <p>
+            Tuesday, 14:49, scattered clouds
+            <br />
+            Humidity: 66%, Wind: 3.13km/h
+          </p>
+        </div>
+        <div>🌤️ 12°C</div>
+      </main>
 
-    <footer>
-      This project was coded by
-      <a href="https://github.com/keedan204" target="_blank"> Keesha Daniels</a>
-      with code hosted on
-      <a
-        href="https://github.com/keedan204/Weather-Forecast-Project"
-        target="_blank"
-        >Github</a
-      >
-      and website hosted on
-      <a
-        href="https://shecode-weather-forecast-project.netlify.app/"
-        target="_blank"
-        >Netlify</a
-      >
-    </footer>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/keedan204" target="_blank">
+          Keesha Daniels</a
+        >
+        with code hosted on
+        <a
+          href="https://github.com/keedan204/Weather-Forecast-Project"
+          target="_blank"
+          >Github</a
+        >
+        and website hosted on
+        <a
+          href="https://shecode-weather-forecast-project.netlify.app/"
+          target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
