--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>Winnipeg</h1>
-          <p>
-            Tuesday, 14:49, scattered clouds
-            <br />
-            Humidity: 66%, Wind: 3.13km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Winnipeg</h1>
+            <p class="weather-app-details">
+              Tuesday, 14:49, scattered clouds
+              <br />
+              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature">🌤️ 12°C</div>
         </div>
-        <div>🌤️ 12°C</div>
       </main>
 
       <footer>
