--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city.."
             required
+            id="search-form-input"
             class="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
@@ -29,7 +30,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Winnipeg</h1>
+            <h1 class="weather-app-city" id="city">Winnipeg</h1>
             <p class="weather-app-details">
               Tuesday, 14:49, scattered clouds
               <br />
@@ -63,5 +64,6 @@
         >
       </footer>
     </div>
+    <script src="src/javascript.js"></script>
   </body>
 </html>
