--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       class="google"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+    ">
     <title>Weather App</title>
   </head>
   <body>
