--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         <a href="https://github.com/keedan204" target="_blank">
           Keesha Daniels</a
         >
-        with code hosted on
+        is open-sourced on
         <a
           href="https://github.com/keedan204/Weather-Forecast-Project"
           target="_blank"
           >Github</a
         >
-        and website hosted on
+        and hosted on
         <a
           href="https://shecode-weather-forecast-project.netlify.app/"
           target="_blank"
